cmake_minimum_required(VERSION 3.27)
project(C__)

set(CMAKE_CXX_STANDARD 17)

add_executable(C__ main.cpp
        "2. Data Tyeps/main.cpp"
        "3. Array/main.cpp"
        "4. Input Output/main.cpp"
        "5. Branching/main.cpp"
        "6. Iteration/main.cpp"
        "7. Number Guess/main.cpp"
        "8. Pointer/main.cpp"
        "8. Pointer/main.h"
        "9. Function/main.cpp")
